--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "klinecharts": "^10.0.0-alpha5",
     "lightweight-charts": "^5.0.6",
+    "re-resizable": "^6.11.2",
     "react": "^19.1.0",
+    "react-data-table-component": "^7.7.0",
+    "react-data-table-component-extensions": "^1.6.0",
     "react-dom": "^19.1.0",
     "react-sliding-side-panel": "^2.0.5"
   },
